[package]
name = "gm_tools"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
hex = "0.4"
base64 = "0.22"
sm3 = "0.4"
sm4 = "0.4"
libsm = "0.6"
rfd = "0.15"
rand = "0.9.2"
num-traits = "0.2.19"
num-bigint = "0.4.6"
zuc = "0.4.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Optimize dependencies even in debug mode to make crypto usable during dev
[profile.dev.package."*"]
opt-level = 3

